UBR-341: Drop editors property in favor of canUpdate
