# src/Help/HelpController.php
@@ -7,6 +7,8 @@ namespace CultuurNet\UiTPASBeheer\Help;
 
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
+use Symfony\Component\HttpKernel\Exception\AccessDeniedHttpException;
+use Symfony\Component\Security\Core\Authorization\AuthorizationCheckerInterface;
 
 class HelpController
 {
@@ -16,12 +18,19 @@ class HelpController
     private $storage;
 
     /**
+     * @var AuthorizationCheckerInterface
+     */
+    private $authorizationChecker;
+
+    /**
      * @param StorageInterface $storage
      */
     public function __construct(
-        StorageInterface $storage
+        StorageInterface $storage,
+        AuthorizationCheckerInterface $authorizationChecker
     ) {
         $this->storage = $storage;
+        $this->authorizationChecker = $authorizationChecker;
     }
 
     /**
@@ -31,13 +40,7 @@ class HelpController
     {
         $text = $this->storage->load();
 
-        return new JsonResponse(
-            [
-                'text' => $text->toNative(),
-                // @todo Put list of editor ids here.
-                'editors' => [],
-            ]
-        );
+        return $this->createResponse($text);
     }
 
     /**
@@ -46,16 +49,37 @@ class HelpController
      */
     public function update(Request $request)
     {
+        if (!$this->canUpdate()) {
+            throw new AccessDeniedHttpException();
+        }
+
+        // @todo Deserialize text from request body.
         $text = new Text('foobar');
 
         $this->storage->save($text);
 
+        return $this->createResponse($text);
+    }
+
+    /**
+     * @param Text $text
+     * @return JsonResponse
+     */
+    private function createResponse(Text $text)
+    {
         return new JsonResponse(
             [
                 'text' => $text->toNative(),
-                // @todo Put list of editor ids here.
-                'editors' => [],
+                'canUpdate' => $this->canUpdate(),
             ]
         );
+    }
+
+    /**
+     * @return bool
+     */
+    private function canUpdate()
+    {
+        return $this->authorizationChecker->isGranted('ROLE_HELP_EDIT');
     }
 }
